--- a/css/selectors/about.css
+++ b/css/selectors/about.css
@@ -2,10 +2,18 @@
   /* ABOUT PAGE VARIABLES */
   --about-poke-width: fit-content;
   --about-poke-padding: 12px 18px;
+  --poke-about-mtop: 20px;
+
   --about-image-size: 200px;
-  --about-text-size: 14px;
-  --about-image-margin-left: 100px;
-  --about-image-margin-top: 75px;
+  --about-image-margin-left: 70px;
+  --about-image-margin-top: 170px;
+  --translate-poke-about: translate(-50%, 20%);
+
+  --about-text-size: 10px;
+
+  --close-color: red;
+  --blink-speed: 1s;
+  --wind-speed: 0.5s;
 }
 
 
@@ -14,64 +22,83 @@
   display: none;
 }
 
-/* Poke Box */
+.me-name {
+  font-size: 40px;
+  color: #ff2595;
+}
+
+.c-info {
+  font-size: 19px;
+  color: #ff2595;
+}
+
 .poke-box-about {
   position: absolute;
-  left: 50%;
+  left:30%;
   top: 30%;
-  transform: translate(-50%, -50%);
+  transform: var(--translate-poke-about); 
   z-index: 50;
 
   background: rgba(24, 24, 24, 0.8);
   border: 4px solid #000;
   box-shadow: 0 0 0 4px #ffffff, 0 0 0 8px #4a4a4a;
+
   width: var(--about-poke-width);
-  max-width: 80vw;
+  max-width: 50vw;                 /* make sure it NEVER leaves screen */
   padding: var(--about-poke-padding);
 
-  display: inline-block;
   border-radius: 4px;
   image-rendering: pixelated;
+  position: relative;
+  overflow: hidden;                 /* prevents overflow glitches */
 }
 
+
 .aboutTab {
-  display: grid;
-  grid-template: 1fr 1fr / 1fr 1.5fr 1fr;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
   font-family: var(--main-font);
   color: var(--text-color);
 }
 
-/* Main Images */
-.aboutTab > img {
-  grid-area: 1 / 1 / 3 / 2;
+.aboutImages {
+  position: relative;
   width: var(--about-image-size);
   height: var(--about-image-size);
+
   margin-left: var(--about-image-margin-left);
   margin-top: var(--about-image-margin-top);
+}
+
+.aboutImages img,
+.aboutImages #adam2 {
+  position: absolute;  
+
+  width: var(--about-image-size);
+  height: var(--about-image-size);
+
+  pointer-events: none;   
 }
 
 #adam2 {
   animation: wind var(--wind-speed) cubic-bezier(1,0.5,0.5,1) infinite;
-  margin-left: var(--about-image-margin-left);
-  margin-top: var(--about-image-margin-top);
 }
 
-/* Description */
 .aboutTab > p {
-  grid-area: 1 / 2 / 3 / 3;
   font-size: var(--about-text-size);
-  line-height: 150%;
+  line-height: 70%;
+  max-width: 300px;
 }
 
-/* Close Button (Fixed grid area) */
 #close {
-  grid-area: 1 / 3 / 2 / 4;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
   font-size: 40px;
   color: var(--close-color);
   animation: blink var(--blink-speed) steps(2, end) infinite;
-  justify-self: end;
-}
-
-#close:hover {
   cursor: pointer;
 }
