--- a/css/selectors/contact.css
+++ b/css/selectors/contact.css
@@ -3,6 +3,8 @@
   --contact-icon-size: 120px;
   --contact-poke-padding: 12px 18px;
   --contact-text-line-height: 250%;
+
+  --icon-margin-top:100px;
 }
 
 
@@ -31,7 +33,7 @@
     gap: 70px;             
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: var(--icon-margin-top);
   }
 
   .poke-box {
@@ -49,6 +51,7 @@
     image-rendering: pixelated;
     border-radius: 4px;
     padding: var(--contact-poke-padding);
+    margin-top: 50px;
   }
   
   .words { 
